[package]
name = "example_using_unsafe_count_tys_in_ty_ts"
version = "0.1.0"
authors = ["Dmitrii - Demenev <demenev.dmitriy1@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5.15"
#unsafe_count_tys_in_ty_ts = "0.1.0"
identify-tts = "0.1.0"
unsafe_count_tys_in_ty_ts = {path="../unsafe_count_tys_in_ty_ts"}