[package]
name = "unsafe_count_ttys"
version = "0.1.0"
authors = ["Dmitrii - Demenev <demenev.dmitriy1@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.10"
quote = "1.0.3"
proc-macro-hack = "0.5.15"
TCFSMFTTTCS = "0.1.1"

[lib]
proc-macro = true